add feature category
