# app/Http/Resources/CategoryResource.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class CategoryResource extends JsonResource
+{
+    public function toArray($request)
+    {
+        return [
+            'id'         => $this->id,
+            'name'       => $this->name,
+            'type'       => $this->type,
+            'created_at' => $this->created_at,
+            'updated_at' => $this->updated_at,
+        ];
+    }
+}
